--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "illuminate/support": "~6|~7",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "6.*"
+        "guzzlehttp/guzzle": ":6.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
