--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "HappiPayServiceProvider"
+                "Atxy2k\\HappiPay\\HappiPayServiceProvider"
             ],
             "aliases": {
                 "HappiPay": "Atxy2k\\HappiPay\\Facades\\HappiPay"
